NetBSD Problem Report #38310
From martin@duskware.de Wed Mar 26 10:33:45 2008
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by narn.NetBSD.org (Postfix) with ESMTP id D814363B8B8
for <gnats-bugs@gnats.NetBSD.org>; Wed, 26 Mar 2008 10:33:45 +0000 (UTC)
Message-Id: <20080326103344.369AF33B6F@mail.duskware.de>
Date: Wed, 26 Mar 2008 11:33:44 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: sun2 has MD ddb commands w/o help
X-Send-Pr-Version: 3.95
>Number: 38310
>Category: port-sun2
>Synopsis: sun2 has MD ddb commands w/o help
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-sun2-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Mar 26 10:35:01 +0000 2008
>Closed-Date: Sun Jun 06 03:35:25 +0000 2010
>Last-Modified: Sun Jun 06 03:50:05 +0000 2010
>Originator: Martin Husemann
>Release: NetBSD 4.99.58
>Organization:
The NetBSD Foundation
>Environment:
System: NetBSD sunny-weather.duskware.de 4.99.58 NetBSD 4.99.58 (SUNNY) #74: Tue Mar 25 13:49:05 CET 2008 martin@night-porter.duskware.de:/usr/src/sys/arch/sparc64/compile/SUNNY sparc64
Architecture: sparc64
Machine: sparc64
>Description:
sun2 has "mach" ddb commands that have no help for options DDB_VERBOSE_HELP.
>How-To-Repeat:
code inspection
>Fix:
Help is very easy to add once you know what the "mach" commands actually do.
Examples can be found in sparc64 or sh3 db_interface.c. While checking these
commands, please also verify the ddb(4) manual page is correct.
>Release-Note:
>Audit-Trail:
From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/38310 CVS commit: src/share/man/man4
Date: Sun, 6 Jun 2010 03:26:57 +0000
Module Name: src
Committed By: mrg
Date: Sun Jun 6 03:26:57 UTC 2010
Modified Files:
src/share/man/man4: ddb.4
Log Message:
note that sun2 has the same ddb mach commands as sun3/sun3x. part of PR#38310
To generate a diff of this commit:
cvs rdiff -u -r1.137 -r1.138 src/share/man/man4/ddb.4
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sun, 06 Jun 2010 03:35:25 +0000
State-Changed-Why:
i commited a couple of fixes for this.
From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/38310 CVS commit: src/sys/arch
Date: Sun, 6 Jun 2010 03:34:14 +0000
Module Name: src
Committed By: mrg
Date: Sun Jun 6 03:34:14 UTC 2010
Modified Files:
src/sys/arch/sun2/sun2: db_machdep.c
src/sys/arch/sun3/sun3: db_machdep.c
Log Message:
implement ddb help for sun2/sun3 commands. PR#38310 and PR#38308.
To generate a diff of this commit:
cvs rdiff -u -r1.11 -r1.12 src/sys/arch/sun2/sun2/db_machdep.c
cvs rdiff -u -r1.26 -r1.27 src/sys/arch/sun3/sun3/db_machdep.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.