implement ddb help for sun2/sun3 commands.  PR#38310 and PR#38308.